--- a/index.html
+++ b/index.html
@@ -187,12 +187,17 @@ body {
             
       <script>
      var share = new Share(".share-button", {
-      networks: {
-        facebook: {
-          app_id: "abctest",
-        }
+  networks: {
+    facebook: {
+      before: function(element) {
+        this.url = element.getAttribute("data-url");
+      },
+      after: function() {
+        console.log("User shared:", this.url);
       }
-    });
+    }
+  }
+});
       </script>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
       
