--- a/index.html
+++ b/index.html
@@ -186,18 +186,19 @@ body {
     <script src="assets/js/ShareButton.min.js"></script>
             
       <script>
-     var share = new Share(".share-button", {
+     config = {
   networks: {
     facebook: {
-      before: function(element) {
-        this.url = element.getAttribute("data-url");
+      before: function() {
+        this.url   = "http://awenafiq.com";
+        this.text  = "Walimatul Urus - Aween & Afiq #aweenafiq";
       },
       after: function() {
         console.log("User shared:", this.url);
       }
     }
   }
-});
+}
       </script>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
       
