--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ body {
     <script src="assets/js/ShareButton.min.js"></script>
             
       <script>
-     config = {
+     var share = new Share(".share-button", {
   networks: {
     facebook: {
       before: function() {
@@ -198,7 +198,7 @@ body {
       }
     }
   }
-}
+});
       </script>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
       
