Update on FB meta
😪

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Wedding website for Aween & Afiq Xilantra">
     <meta name="author" content="Afiq Xilantra">
-    <link rel="icon" href="../../favicon.ico">
-    
+    <!-- FB -->
+    <meta property="og:url"           content="http://aweenafiq.com" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="Walimatul Urus - Aween & Afiq" />
+    <meta property="og:description"   content="Website rasmi walimatul urus Aween & Afiq Xilantra." />
+    <meta property="og:image"         content="http://aweenafiq.com/assets/img/hero-bg.jpg" />
+      
+    <link rel="icon" href="favicon.ico">
     <title>Walimatul Urus - Aween &amp; Afiq</title>
 
     <!-- Bootstrap core CSS -->
@@ -190,7 +196,7 @@ body {
   networks: {
     facebook: {
       before: function() {
-        this.url   = "http://awenafiq.com";
+        this.url   = "http://aweenafiq.com";
         this.text  = "Walimatul Urus - Aween & Afiq #aweenafiq";
       },
       after: function() {
