--- a/elements/elements.html
+++ b/elements/elements.html
@@ -12,11 +12,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-styles/paper-styles-classes.html">
 <link rel="import" href="../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 <link rel="import" href="../bower_components/iron-fit-behavior/iron-fit-behavior.html">
-<link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html">
+<!--link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animations.html">
 
 <link rel="import" href="../bower_components/neon-animation/web-animations.html">
-<link rel="import" href="../bower_components/web-animations-js/web-animations.html">
+<link rel="import" href="../bower_components/web-animations-js/web-animations.html"-->
 <link rel="import" href="../bower_components/web-animations-js/web-animations-next-lite.min.js">
 
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
