--- a/elements/my-bertandang/my-bertandang.html
+++ b/elements/my-bertandang/my-bertandang.html
@@ -4,7 +4,7 @@
         .kad-sendiri {max-width: 200px; max-height: 200px; width:100%; height: 100%;
             -webkit-box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
 box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
-        background: url(/images/kenduri_kahwin_aween_afiq_xilantra.jpg) no-repeat;
+        background: url(../../images/kenduri_kahwin_aween_afiq_xilantra.jpg) no-repeat;
         background-size: cover
         }
     </style>
