--- a/elements/my-email/my-email.html
+++ b/elements/my-email/my-email.html
@@ -5,7 +5,7 @@
         #mc_embed_signup_scroll {height: 465px; background: rgba(0, 0, 0, 0.69); padding: 20px;border-radius: 4px;
             -webkit-box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
 box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
-        background: url(/images/request_invitation_walimatul_urus_aween_afiq_xilantra.jpg) no-repeat;
+        background: url(../../images/request_invitation_walimatul_urus_aween_afiq_xilantra.jpg) no-repeat;
         background-size: cover}
         .mc-field-group {text-align: left}
     </style>
