--- a/elements/instagram-gallery/instagram-gallery.html
+++ b/elements/instagram-gallery/instagram-gallery.html
@@ -4,7 +4,7 @@
         .kad-sendiri {height: 465px; width: 450px; margin-top: 0;
             -webkit-box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
 box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
-        background: url(/images/galeri_instagram_aween_afiq_xilantra.jpg) no-repeat;
+        background: url(../../images/galeri_instagram_aween_afiq_xilantra.jpg) no-repeat;
         background-size: cover;
         }
         a {color:#fff; text-decoration: none; font-weight: bold}
