--- a/elements/majlis-bersanding/majlis-bersanding.html
+++ b/elements/majlis-bersanding/majlis-bersanding.html
@@ -4,7 +4,7 @@
         .kad-sendiri {max-width: 200px; max-height: 400px; height: 100%; margin-top: 0; border-radius: 4px; background: rgba(0, 0, 0, 0.6);color: #fff;
             -webkit-box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
 box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
-        background: url(/images/walimatul_urus_aween_afiq_xilantra.jpg) no-repeat;
+        background: url(../../images/walimatul_urus_aween_afiq_xilantra.jpg) no-repeat;
         background-size: cover
         }
         
