--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type"          content="website"/>
     <meta property="og:title"         content="Walimatul Urus - Afiq & Aween"/>
     <meta property="og:description"   content="Website untuk walimatul urus Afiq & Aween!"/>
-    <meta property="og:image"         content="http://aweenafiq.com/assets/img/hero-bg.jpg"/>
+    <meta property="og:image"         content="http://aweenafiq.com/images/hero-bg.jpg"/>
             
     <link rel="icon" href="favicon.ico">
     <title>✨Walimatul Urus - Afiq &amp; Aween</title>
