--- a/indexa.html
+++ b/indexa.html
@@ -15422,6 +15422,8 @@ box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
   	<div class="footer">
   		<hr class="my-salam"> 
   		<p>© Copyright 2015-2016 <a href="http://afiq.me" title="Visit My Website" target="_blank">Afiq Xilantra Azmi</a>
+  		<br>
+  			<small>Made with Polymer</small>
   		</p></div>
 
   <!-- build:js scripts/app.js -->
