--- a/index.html
+++ b/index.html
@@ -15421,9 +15421,9 @@ box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
   </template>
   	<div class="footer">
   		<hr class="my-salam"> 
-  		<p>© Copyright 2015-2016 <a href="http://afiq.me" title="Visit My Website" target="_blank">Afiq Xilantra Azmi</a>
+  		<p>© Copyright 2015-2016 <a href="http://afiq.me" title="Visit My Website" target="_blank">Afiq Xilantra Azmi</a> &amp; <a href="http://instagram.com/aweenzulbe" target="_blank" title="My Wife!">Aween Zulbe</a>
   			<br>
-  			<small>Made with Polymer</small>
+  			<small style="opacity:0.6">Made with Polymer</small>
   		</p></div>
 
   <!-- build:js scripts/app.js -->
